# Machine-Learning

./: README.md
KNN/: CMakeLists.txt  data.cpp  data.h  main.cpp  model.cpp  model.h  object.cpp  object.h
LinearRegression/: CMakeLists.txt  data.cpp  data.h  main.cpp  model.cpp  model.h  object.cpp  object.h
LogisticRegression/: CMakeLists.txt  data.cpp  main.cpp  model.cpp  model.h  object.cpp
NaiveBayesClassificator/: CMakeLists.txt  data.cpp  data.h  main.cpp  model.cpp  model.h  object.cpp  object.h
NeuralNetwork/: CMakeLists.txt  data.cpp  main.cpp  model.cpp  model.h
PCA/: CMakeLists.txt  main.cpp
RandomForest/: CMakeLists.txt  data.cpp  main.cpp  model.cpp  model.h  tree.cpp  tree.h
RecommendedSystem/: CMakeLists.txt  data.cpp  data.h  main.cpp  model.cpp  model.h
SVM/: CMakeLists.txt  main.cpp  model.cpp  model.h
